Updated Installation Instructions

--- a/Introduction/CH1_00-Introduction.ipynb
+++ b/Introduction/CH1_00-Introduction.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "First, **you do not need to program anything**, however, you will have to change the values of input parameters in the code cells. Of course, you are encouraged to modify the code in order to explore the data analysis methods, what can go wrong?\n",
     "\n",
-    "The advantage of jupyter notebooks is that it is a combination of an usual textbook and data-analysis software. The intent of the book is not to make a cool graphic user interface with a fast data analysis but to make it obvious what numerical and physical means are used to extract quantitative values from these data.\n",
+    "The advantage of jupyter notebooks is that it is a combination of a usual textbook and data-analysis software. The intent of the book is not to make a cool graphic user interface with a fast data analysis but to make it obvious what numerical and physical means are used to extract quantitative values from these data.\n",
     "\n",
     "\n",
     "## Content\n",
