--- a/Introduction/CH1_02-Prerequisites.ipynb
+++ b/Introduction/CH1_02-Prerequisites.ipynb
@@ -44,12 +44,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "cd\n",
     "## Packages\n",
     "The idea behind any python program is to make use of the highly efficient libraries that already exist.\n",
     "\n",
     "I use [anaconda3](https://www.anaconda.com/distribution/) (not miniconda) which is available for all major operating systems.\n",
     "\n",
-    "We us a few modules that come with every python installation, like:\n",
+    "We use a few modules that come with every python installation, like:\n",
     "\n",
     "* math\n",
     "* sys\n",
@@ -90,20 +91,20 @@
    "source": [
     "## Basic Installation of Python Environment\n",
     "\n",
-    "I recommend to install the free **anaconda3** from this [link](https://www.anaconda.com/products/individual).\n",
+    "I recommend installing the free **anaconda3** from this [link](https://www.anaconda.com/products/individual).\n",
     "\n",
     "If you have an old version of anaconda, please reinstall the new version.\n",
     "The package is based on fairly new packages of scipy and numpy, dask, and h5py, which will create problems in old version.\n",
     "\n",
     "Once you have installed anaconda\n",
-    "- open the anaconda power shell prompt\n",
+    "- open the anaconda PowerShell prompt\n",
     "- and type:\n",
     ">conda install -c conda-forge ase\n",
     "\n",
-    "You are set to go on from here toopen jupyter notebook server.\n",
+    "You are set to go on from here to open jupyter notebook server.\n",
     "\n",
     "Optionally you can install two other packages that were introduced above:\n",
-    "- type in the power shell:\n",
+    "- type in the PowerShell:\n",
     "> conda install -c simpleitk simpleitk\n",
     ">\n",
     "> conda install -c conda-forge spglib"
@@ -208,8 +209,8 @@
     "def test_package(package_name):\n",
     "    \"\"\"Test if package exists and returns version or -1\"\"\"\n",
     "    try:\n",
-    "        version = (get_distribution(package_name).version)\n",
-    "    except (DistributionNotFound, ImportError) as err:\n",
+    "        version = get_distribution(package_name).version\n",
+    "    except (DistributionNotFound, ImportError):\n",
     "        version = '-1'\n",
     "    return version\n",
     "\n",
