Updated Installation Instructions

--- a/Introduction/CH1_02-Prerequisites.ipynb
+++ b/Introduction/CH1_02-Prerequisites.ipynb
@@ -143,7 +143,7 @@
    },
    "outputs": [],
    "source": [
-    "# import matplotlib and numpy with this **magic** comand\n",
+    "# import matplotlib and numpy with this **magic** command\n",
     "#                       use \"inline\" instead of \"notebook\" for non-interactive plots\n",
     "#                       use \"widget\" instead of \"notebook\" for jupyter lab\n",
     "%pylab --no-import-all notebook\n",
@@ -159,7 +159,7 @@
     "The calculations depend on **Numpy** and an installation of that package that is compiled to include BLAS and LAPACK libraries will be much faster than the standalone version.\n",
     "For example the numpy installed on ubuntu with *> sudo apt-get install python3-numpy* or at windows you can install the numpy package from Gohlke's webpage which compiled against the MKL library of Intel. If you used anaconda3, everything is already optimized.\n",
     "\n",
-    "The comand below lets you see what you have"
+    "The command below lets you see what you have"
    ]
   },
   {
@@ -253,7 +253,7 @@
    "metadata": {},
    "source": [
     "## Test\n",
-    "Let's test if the installation ws succesfull and plot a unit cell. You can rotate the plot around, zoom and select. Try it!"
+    "Let's test if the installation was successful and plot a unit cell. You can rotate the plot around, zoom and select. Try it!"
    ]
   },
   {
@@ -266,7 +266,7 @@
    },
    "outputs": [],
    "source": [
-    "import pyTEMlib.kinematic_scattering as ks # Import kinematic sCattering Library fromt he pyTEMlib\n",
+    "import pyTEMlib.kinematic_scattering as ks # Import kinematic scattering library from pyTEMlib\n",
     "\n",
     "# make a structure dictionary\n",
     "tags = ks.structure_by_name('Graphite')\n",
@@ -316,7 +316,7 @@
     "\n",
     "I am using some extensions to jupyter notebooks which can be installed with the following cells\n",
     "\n",
-    "I like mostly the table of content extension that shows where in the notebook I am and let's me jump to different parts easily.\n"
+    "I like mostly the table of content extension that shows where in the notebook I am and lets me jump to different parts easily.\n"
    ]
   },
   {
@@ -338,7 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use one of the following (uncomment pip and comment out the conda comand line, if you are not in an anaconda envoironment)"
+    "Use one of the following (uncomment pip and comment out the conda command line, if you are not in an anaconda environment)"
    ]
   },
   {
