Updated Installation Instructions

--- a/Introduction/CH1_03-Data_Representation.ipynb
+++ b/Introduction/CH1_03-Data_Representation.ipynb
@@ -22,7 +22,7 @@
     "by Gerd Duscher, Spring 2022\n",
     "<br>\n",
     "Microscopy Facilities<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
     "Materials Science & Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
