--- a/Introduction/CH1_01-Introduction_Python.ipynb
+++ b/Introduction/CH1_01-Introduction_Python.ipynb
@@ -19,7 +19,6 @@
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
     "by Gerd Duscher, Fall 2022\n",
-
     "\n",
     "Microscopy Facilities<br>\n",
     "Institute of Advanced Materials & Manufacturing<br>\n",
@@ -60,17 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The angle between vectors a and b is 49.80°\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We need to import the numpy package\n",
     "import numpy as np\n",
@@ -103,22 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Square root of dot product of vector with itself\n",
-      "2.449489742783178\n",
-      "\n",
-      " Two other ways to calculate this\n",
-      "2.449489742783178\n",
-      "2.449489742783178\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Square root of dot product of vector with itself')\n",
     "print(np.sqrt(np.dot(a_vector,a_vector)))\n",
@@ -142,17 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The angle between vectors a and b is 49.80°\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# unit vectors\n",
     "a_normed = a_vector/a_length\n",
@@ -178,32 +148,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function angle_between_two_vectors in module __main__:\n",
-      "\n",
-      "angle_between_two_vectors(vector1, vector2)\n",
-      "    Calculation of the angle between two vectors of the same dimension by arccos of the dot product\n",
-      "    \n",
-      "    Input:\n",
-      "    ------\n",
-      "        vector1, vector2: two vectors as lists or numpy arrays\n",
-      "        \n",
-      "    Output:\n",
-      "    -------\n",
-      "        angle: angle between the vectors in radians\n",
-      "\n",
-      "The angle between vectors a: [1, 1, 2] and b: [0, 3, 1] is 49.80°\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def angle_between_two_vectors(vector1, vector2):\n",
     "    \"\"\"\n",
@@ -256,18 +205,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "angles of vector field to first vector\n",
-      "[ 0.    49.797 40.203]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def angles_to_first_vector(vector_field):\n",
     "    \"\"\"\n",
@@ -348,7 +288,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -362,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": "2",
