--- a/Introduction/CH1_04-Open_File.ipynb
+++ b/Introduction/CH1_04-Open_File.ipynb
@@ -24,10 +24,10 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2021\n",
+    "by Gerd Duscher, Spring 2022\n",
     "\n",
     "Microscopy Facilities<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
     "Materials Science & Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
@@ -68,23 +68,17 @@
     }
    ],
    "source": [
-    "import sys\n",
     "from pkg_resources import get_distribution, DistributionNotFound\n",
     "\n",
     "def test_package(package_name):\n",
     "    \"\"\"Test if package exists and returns version or -1\"\"\"\n",
     "    try:\n",
     "        version = get_distribution(package_name).version\n",
-    "    except (DistributionNotFound, ImportError) as err:\n",
+    "    except (DistributionNotFound, ImportError):\n",
     "        version = '-1'\n",
     "    return version\n",
     "\n",
-    "# Colab setup ------------------\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    !pip install pyTEMlib -q\n",
-    "# pyTEMlib setup ------------------\n",
-    "else:\n",
-    "    if test_package('pyTEMlib') < '0.2021.10.1':\n",
+    "if test_package('pyTEMlib') < '0.2021.12.1':\n",
     "        print('installing pyTEMlib')\n",
     "        !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "# ------------------------------\n",
@@ -118,8 +112,8 @@
    ],
    "source": [
     "%pylab --no-import-all notebook\n",
+    "\n",
     "import sys\n",
-    "# import pyTEMlib\n",
     "sys.path.insert(0, '../../pyTEMlib')\n",
     "import pyTEMlib\n",
     "import pyTEMlib.file_tools  as ft     # File input/ output library\n",
@@ -143,9 +137,9 @@
    "source": [
     "## Open a file \n",
     "\n",
-    "This function opens a hfd5 file in the pyNSID style which enables you to keep track of your data anlysis.\n",
+    "This function opens a hfd5 file in the pyNSID style which enables you to keep track of your data analysis.\n",
     "\n",
-    "Please see the **[Installation](CH1-Prerequisites.ipynb#TEM-Library)** notebook for installation.\n",
+    "Please see the **[Installation](CH1_02-Prerequisites.ipynb#TEM-Library)** notebook for installation.\n",
     "\n",
     "We want to consolidate files into one dataset that belongs together.  For example a spectrum image dataset consists of: \n",
     "* Survey image, \n",
@@ -155,7 +149,7 @@
     "\n",
     "So load the top dataset first in the above example the survey image.\n",
     "\n",
-    "Please note that the plotting routine of ``matplotlib`` was introduced in **[Matplotlib and Numpy for Micrographs](CH1-Data_Representation.ipynb)** notebook.\n",
+    "Please note that the plotting routine of ``matplotlib`` was introduced in **[Matplotlib and Numpy for Micrographs](CH1_03-Data_Representation.ipynb)** notebook.\n",
     "\n",
     "**Use the file p1-3hr.dm3 from TEM_data directory for a practice run**"
    ]
@@ -184,7 +178,7 @@
    ],
    "source": [
     "# ------ Input ------- #\n",
-    "load_example = False\n",
+    "load_example = True\n",
     "# -------------------- #\n",
     "\n",
     "# Open file widget and select file which will be opened in code cell below\n",
@@ -478,12 +472,13 @@
     "    ----------\n",
     "    dataset: sidpy.Dataset\n",
     "        data to write to file\n",
-    "    h5_group: None, sidpy.Dataset, h5py.Group, h5py.Datset, h5py.File\n",
+    "    h5_group: None, sidpy.Dataset, h5py.Group, h5py.Dataset, h5py.File\n",
     "        identifier to which group the data are added (if None the dataset must have a valid h5_dataset)\n",
     "\n",
-    "    Returns:\n",
+    "    Return\n",
+    "    ------\n",
     "    log_group: h5py.Dataset\n",
-    "        reference the dataset has been written to. (is also stored in h5_dataset attribute of sipy.Dataset)\n",
+    "        reference the dataset has been written to. (is also stored in h5_dataset attribute of sidpy.Dataset)\n",
     "    \"\"\"\n",
     "\n",
     "    if h5_group is None:\n",
@@ -497,7 +492,7 @@
     "        h5_group = h5_group['Measurement_000']\n",
     "        \n",
     "    if not isinstance(h5_group, h5py.Group):\n",
-    "        raise TypeError('Need a valid indentifier for a hdf5 group to store data in')\n",
+    "        raise TypeError('Need a valid identifier for a hdf5 group to store data in')\n",
     "\n",
     "    log_group = sidpy.hdf.prov_utils.create_indexed_group(h5_group, 'Channel_')\n",
     "    h5_dataset = pyNSID.hdf_io.write_nsid_dataset(dataset, log_group)\n",
@@ -510,7 +505,7 @@
     "    return h5_dataset\n",
     "\n",
     "print(current_channel)\n",
-    "current_dataset.metadata= {'a': 'nix', 'b': 'gara'}\n",
+    "current_dataset.metadata= {'a': 'nix', 'b': 'nada'}\n",
     "#new_data = pyNSID.hdf_io.write_results(current_channel.parent, dataset=current_dataset)\n",
     "new_data = add_data(current_dataset, h5_group=None)\n",
     "\n",
@@ -713,7 +708,7 @@
    "source": [
     "## Adding Data\n",
     "\n",
-    "To add another dataset that belongs to this measurement we will use the **h5_add_channel** from  **filetools** in the  pyTEMlib package.\n",
+    "To add another dataset that belongs to this measurement we will use the **h5_add_channel** from  **file_tools** in the  pyTEMlib package.\n",
     "\n",
     "Here is how we add a channel there.\n",
     "\n",
@@ -737,12 +732,13 @@
     "    ----------\n",
     "    dataset: sidpy.Dataset\n",
     "        data to write to file\n",
-    "    h5_group: None, sidpy.Dataset, h5py.Group, h5py.Datset, h5py.File\n",
+    "    h5_group: None, sidpy.Dataset, h5py.Group, h5py.Dataset, h5py.File\n",
     "        identifier to which group the data are added (if None the dataset must have a valid h5_dataset)\n",
     "\n",
     "    Returns:\n",
-    "    log_group: h5py.Dataset\n",
-    "        reference the dataset has been written to. (is also stored in h5_dataset attribute of sipy.Dataset)\n",
+    "    --------\n",
+    "    h5_dataset: h5py.Dataset\n",
+    "        reference the dataset has been written to. (is also stored in h5_dataset attribute of sidpy.Dataset)\n",
     "    \"\"\"\n",
     "\n",
     "    if h5_group is None:\n",
@@ -756,7 +752,7 @@
     "        h5_group = h5_group['Measurement_000']\n",
     "\n",
     "    if not isinstance(h5_group, h5py.Group):\n",
-    "        raise TypeError('Need a valid indentifier for a hdf5 group to store data in')\n",
+    "        raise TypeError('Need a valid identifier for a hdf5 group to store data in')\n",
     "\n",
     "    log_group = sidpy.hdf.prov_utils.create_indexed_group(h5_group, 'Channel_')\n",
     "    h5_dataset = pyNSID.hdf_io.write_nsid_dataset(dataset, log_group)\n",
@@ -775,7 +771,7 @@
    "source": [
     "We use above functions to add the content of a (random) data-file to the current file.\n",
     "\n",
-    "This is important if you for example want to add a Z-contrast or survey-image to an spectrum image.\n",
+    "This is important if you for example want to add a Z-contrast or survey-image to a spectrum image.\n",
     "\n",
     "Therefore, these functions enable you to collect the data from different files that belong together.\n"
    ]
@@ -864,7 +860,7 @@
     "#new_channel = h5_add_channel(current_channel)\n",
     "add_dataset(current_dataset, current_channel.parent)\n",
     "\n",
-    "ft.h5_tree(current_channel)  #wraps usid.hdf_utils.print_tree(h5_file)"
+    "ft.h5_tree(current_channel)  #wraps sidpy.hdf_utils.print_tree(h5_file)"
    ]
   },
   {
@@ -873,7 +869,7 @@
    "source": [
     "## Adding additional information\n",
     "\n",
-    "Similarly we can add a whole new measurement group or a structure group.\n",
+    "Similarly, we can add a whole new measurement group or a structure group.\n",
     "\n",
     "This function will be contained in the KinsCat package of pyTEMlib.\n",
     "\n",
@@ -886,8 +882,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyTEMlib.KinsCat as ks         # Kinematic sCattering Library\n",
-    "                             # with Atomic form factors from Kirklands book\n",
+    "import pyTEMlib.kinematic_scattering as ks         # kinematic scattering Library\n",
+    "                             # with Atomic form factors from Kirkland's book\n",
     "\n",
     "def h5_add_crystal_structure(h5_file, crystal_tags):\n",
     "    structure_group = pyNSID.io.hdf_utils.create_indexed_group(h5_file,'Structure')\n",
@@ -927,9 +923,9 @@
     "\n",
     "If you like a result of your calculation, log it.\n",
     "|\n",
-    "The function will write your calculation to the pyUSID style file and attaches a time stamp.\n",
+    "The function will write your calculation to the pyNSID style file and attaches a time stamp.\n",
     "\n",
-    "The two functions below are part of  file_tools of pyTEMlib."
+    "The two functions below are part of file_tools of pyTEMlib."
    ]
   },
   {
@@ -942,7 +938,7 @@
     "\n",
     "log_group = ft.log_results(current_dataset, info_dictionary)\n",
     "\n",
-    "usid.hdf_utils.print_tree(h5_file)\n"
+    "sidpy.hdf_utils.print_tree(h5_file)\n"
    ]
   },
   {
@@ -969,7 +965,7 @@
     "## data tag contains the newly calculated result\n",
     "out_tags['data'] = np.fft.fftshift(np.fft.fft2(data))\n",
     "\n",
-    "## meta data (can be anything, but good practice is to be compatible with pyUSID data set)\n",
+    "## meta data (can be anything, but good practice is to be compatible with pyNSID data set)\n",
     "out_tags['analysis']= 'Fourier_Transform'\n",
     "\n",
     "out_tags['spatial_origin_x'] = data.shape[0]/2\n",
@@ -1127,7 +1123,7 @@
     "Often more than one data set belong together.\n",
     "For instance a spectrum image has a survey image and a Z-contrast image recorded with the survey image.\n",
     "\n",
-    "Here we jsut load another image for example *p1-3-hr3b.dm3*"
+    "Here we just load another image for example *p1-3-hr3b.dm3*"
    ]
   },
   {
