--- a/Introduction/CH1_02-Prerequisites.ipynb
+++ b/Introduction/CH1_02-Prerequisites.ipynb
@@ -89,33 +89,31 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Basic Installation of Python Environment\n",
     "\n",
     "I recommend installing the free **anaconda3** from this [link](https://www.anaconda.com/products/individual).\n",
     "\n",
     "If you have an old version of anaconda, please reinstall the new version.\n",
-    "The package is based on fairly new packages of scipy and numpy, dask, and h5py, which will create problems in old version.\n",
+    "The lecture is based on fairly new packages of scipy and numpy, dask, and h5py, which will create problems in old anaconda versions.\n",
     "\n",
     "Once you have installed anaconda\n",
-    "- open the anaconda PowerShell prompt\n",
-    "- and type:\n",
+    "- open the anaconda PowerShell prompt and type:\n",
     ">conda install -c conda-forge ase\n",
     "\n",
     "You are set to go on from here to open jupyter notebook server.\n",
     "\n",
-    "Optionally you can install two other packages that were introduced above:\n",
+    "Optionally, you can install two other packages that were introduced above:\n",
     "- type in the PowerShell:\n",
     "> conda install -c simpleitk simpleitk\n",
     ">\n",
     "> conda install -c conda-forge spglib"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,10 +165,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true,
     "pycharm": {
      "is_executing": true
-    }
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -197,10 +195,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true,
     "pycharm": {
      "is_executing": true
-    }
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -225,15 +223,14 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Now we load pyTEMlib to make it available for this notebook."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Now we load pyTEMlib to make it available for this notebook."
+   ]
   },
   {
    "cell_type": "code",
@@ -367,10 +364,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true,
     "pycharm": {
      "is_executing": true
-    }
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -396,7 +393,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -410,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": "3",
