--- a/Diffraction/CH2_03-Basic_Crystallography.ipynb
+++ b/Diffraction/CH2_03-Basic_Crystallography.ipynb
@@ -105,26 +105,26 @@
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n",
-      "Using KinsCat library version  0.5  by G.Duscher\n",
-      "spglib not installed; Symmetry functions of spglib disabled\n",
-      "pyTEM version:  0.2021.01.09\n"
+      "Using kinematic_scattering library version  0.6  by G.Duscher\n",
+      "Symmetry functions of spglib enabled\n",
+      "pyTEM version:  0.2021.06.1\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    %pylab --no-import-all inline\n",
-    "else:\n",
-    "    %pylab --no-import-all notebook\n",
+    "%pylab --no-import-all notebook\n",
     "    \n",
     "# 3D plotting package \n",
     "from mpl_toolkits.mplot3d import Axes3D # 3D plotting\n",
     "\n",
+    "import ase\n",
+    "\n",
     "# Import libraries from the book\n",
+    "import sys\n",
+    "sys.path.insert(0, '../../pyTEMlib')\n",
     "import pyTEMlib\n",
-    "import pyTEMlib.KinsCat as ks         # Kinematic sCattering Library\n",
-    "                             # with Atomic form factors from Kirklands book\n",
+    "import pyTEMlib.kinematic_scattering as ks         # kinematic scattering Library\n",
+    "                             # with atomic form factors from Kirkland's book\n",
     "# it is a good idea to show the version numbers at this point for archiving reasons.\n",
     "print('pyTEM version: ',pyTEMlib.__version__)"
    ]
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -182,9 +182,9 @@
      "output_type": "stream",
      "text": [
       "structure matrix \n",
-      " [[0.246 0.    0.   ]\n",
-      " [0.123 0.213 0.   ]\n",
-      " [0.    0.    0.671]]\n",
+      " [[2.46 0.   0.  ]\n",
+      " [1.23 2.13 0.  ]\n",
+      " [0.   0.   6.71]]\n",
       "elements \n",
       " ['C', 'C', 'C', 'C']\n",
       "base \n",
@@ -196,32 +196,65 @@
     }
    ],
    "source": [
-    "#Initialize the dictionary for all the input\n",
-    "tags = {}\n",
     "\n",
     "# Create graphite unit cell (or structure matrix)\n",
-    "a = b = 0.246 #nm\n",
-    "c = 0.671\n",
+    "a = b = 2.46  # Angstrom\n",
+    "c = 6.71  # Angstrom\n",
     "gamma = 60\n",
     "alpha = beta = 90\n",
     "\n",
     "## Create the structure matrix for a hexagonal system explicitly:\n",
-    "tags['unit_cell'] = np.array([[a,0.,0.],  ## also called the structure matrix\n",
+    "unit_cell = np.array([[a,0.,0.],  ## also called the structure matrix\n",
     "                    [np.cos(np.radians(gamma))*a,np.sin(np.radians(gamma))*a,0. ],\n",
     "                     [0.,0.,c]\n",
     "                    ])\n",
-    "print('structure matrix \\n',np.round(tags['unit_cell'],3))\n",
+    "print('structure matrix \\n',np.round(unit_cell,3))\n",
     "\n",
-    "tags['elements'] = ['C']*4\n",
-    "tags['base'] = [[0,0,0], [0,0,1/2], [1/3,1/3,0], [2/3,2/3, 1/2]]\n",
-    "print('elements \\n',(tags['elements']))\n",
-    "print('base \\n',np.round(tags['base'],3))\n",
+    "elements = ['C']*4\n",
+    "base = [[0,0,0], [0,0,1/2], [1/3,1/3,0], [2/3,2/3, 1/2]]\n",
+    "print('elements \\n',(elements))\n",
+    "print('base \\n',np.round(base,3))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'crystal_name': 'Graphite',\n",
+       " 'a': 0.2464,\n",
+       " 'c': 0.6711,\n",
+       " 'unit_cell': array([[2.46400000e-01, 0.00000000e+00, 1.50876486e-17],\n",
+       "        [1.23200000e-01, 2.13388659e-01, 1.50876486e-17],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 6.71100000e-01]]),\n",
+       " 'elements': ['C', 'C', 'C', 'C'],\n",
+       " 'base': array([[0.        , 0.        , 0.        ],\n",
+       "        [0.        , 0.        , 0.5       ],\n",
+       "        [0.33333333, 0.33333333, 0.        ],\n",
+       "        [0.66666667, 0.66666667, 0.5       ]]),\n",
+       " 'reference': 'P. Trucano and R. Chen, Nature, 1975, 258, 136',\n",
+       " 'link': 'https://doi.org/10.1038/258136a0'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#alternatively with the function \"structure_by_name\" of the KinsCat library\n",
+    "\n",
+    "tags = ks.structure_by_name('Graphite')\n",
+    "tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -230,7 +263,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['C', 'C', 'C', 'C']\n",
       "structure matrix [nm]\n",
       " [[0.246 0.    0.   ]\n",
       " [0.123 0.213 0.   ]\n",
@@ -246,9 +278,6 @@
     }
    ],
    "source": [
-    "#alternatively with the function \"structure_by_name\" of the KinsCat library\n",
-    "\n",
-    "tags = ks.structure_by_name('Graphite')\n",
     "print('structure matrix [nm]\\n',np.round(tags['unit_cell'],3))\n",
     "print('elements \\n',tags['elements'])\n",
     "print('base \\n',np.round(tags['base'],3))"
@@ -4628,9 +4657,8 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4644,7 +4672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": "3",
