--- a/Introduction/CH1_04-Open_File.ipynb
+++ b/Introduction/CH1_04-Open_File.ipynb
@@ -165,12 +165,14 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Select(description='Select file:', layout=Layout(width='70%'), options=('.',), rows=10, value='.')",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7f2f613ded7d4509966ce3dafac3c38f",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "7f2f613ded7d4509966ce3dafac3c38f"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Select(description='Select file:', layout=Layout(width='70%'), options=('.',), rows=10, value='.')"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -243,6 +245,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -270,13 +277,7 @@
    "source": [
     "print(file_name)\n",
     "ft.open_file(file_name)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1222,9 +1223,9 @@
  "metadata": {
   "hide_code_all_hidden": false,
   "kernelspec": {
-   "name": "p39",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "display_name": "p39"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1236,7 +1237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": "5",
