--- a/Diffraction/CH2_02-Atomic_Form_Factor.ipynb
+++ b/Diffraction/CH2_02-Atomic_Form_Factor.ipynb
@@ -3344,7 +3344,7 @@
     "- <font size = \"3\">  **Back [The Electron](CH2_01-Electron.ipynb)** </font>\n",
     "- <font size = \"3\">  **Next: [Basic Crystallography](CH2_03-Basic_Crystallography.ipynb)** </font>\n",
     "- <font size = \"3\">  **Chapter 2: [Diffraction](CH2_00-Diffraction.ipynb)** </font>\n",
-    "- <font size = \"3\">  **List of Content: [Front](../_MSE672_Intro_TEM.ipynb_.ipynb)** </font>\n"
+    "- <font size = \"3\">  **List of Content: [Front](../_MSE672_Intro_TEM.ipynb)** </font>\n"
    ]
   },
   {
