--- a/Diffraction/CH2_03-Basic_Crystallography.ipynb
+++ b/Diffraction/CH2_03-Basic_Crystallography.ipynb
@@ -2423,7 +2423,7 @@
    "source": [
     "## Navigation\n",
     "\n",
-    "- <font size = \"3\">  **Back Chapter 1: [Atomic Form Factor](CH2_02-Atomic_Form_Factor.ipynb)** </font>\n",
+    "- <font size = \"3\">  **Back: [Basic Crystallography](CH2_03-Basic_Crystallography.ipynb)** </font>\n",
     "- <font size = \"3\">  **Next: [Structure Factors](CH2_04-Structure_Factors.ipynb)** </font>\n",
     "- <font size = \"3\">  **Chapter 2: [Diffraction](CH2_00-Diffraction.ipynb)** </font>\n",
     "- <font size = \"3\">  **List of Content: [Front](../_MSE672_Intro_TEM.ipynb)** </font>"
