--- a/Diffraction/Ch2_00-Diffraction.ipynb
+++ b/Diffraction/Ch2_00-Diffraction.ipynb
@@ -16,10 +16,10 @@
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
     "\n",
-    "by Gerd Duscher, Spring 2021\n",
+    "by Gerd Duscher, Spring 2022\n",
     "\n",
     "Microscopy Facilities<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
     "Materials Science & Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The diffraction chapter has the following sections:\n",
+    "\n",
     "## Content\n",
     "\n",
     "The Diffraction chapter has the following sections:\n",
@@ -39,7 +39,8 @@
     "* [The Electron](CH2_01-Electron.ipynb)\n",
     "* [Atomic Form Factor](CH2_02-Atomic_Form_Factor.ipynb)\n",
     "* [Basic Crystallography](CH2_03-Basic_Crystallography.ipynb)\n",
-    "    * [Fourier Transform Laboratory](CH2_03b-FourierTransformLaboratory.ipynb)\n",
+    "    * [Nice Atom Plotting](CH2_03b-JSmol_Viewer.ipynb)\n",
+    "    * [Fourier Transform Laboratory](CH2_03c-FourierTransformLaboratory.ipynb)\n",
     "* [Structure Factors](CH2_04-Structure_Factors.ipynb)\n",
     "* [Analyzing Ring Diffraction Pattern](CH2_05-Diffraction-Rings.ipynb)\n",
     "* [Kinematic Scattering Geometry](CH2_06-Kinematic_Scattering_Geometry.ipynb)\n",
@@ -71,12 +72,12 @@
     "## Diffraction and Imaging\n",
     "\n",
     "- To achieve an image from a diffraction pattern only a **Fourier Transformation** of parts of the diffraction pattern is needed.\n",
-    "- Any image in a TEM can be described as **Fourier Filtering**, because we select the beams that form the images. The knowledge of which and how many diffracted beams contribute to the image formation is crucial.\n",
+    "- Any image in a TEM can be described as **Fourier Filtering**, because we select the beams which form the images. The knowledge of which and how many diffracted beams contribute to the image formation is crucial.\n",
     "- Because the intensity of selected diffracted beams is necessary to calculate image intensities, dynamic diffraction theory is necessary.\n",
     "- Understanding difraction theory of electrons is at the core of the analysis of TEM data.\n",
     "\n",
     "\n",
-    "According to Fourier-Optical view of the TEM we first form a diffraction pattern (in Fourier space) and after another (inverse) Fourier\n",
+    ">According to *Fourier-Optical* view of the TEM, we first form a diffraction pattern (in Fourier space) and after another (inverse) Fourier\n",
     "Transformation of parts of this diffraction pattern we are back in real space and can observe an image.\n",
     "\n",
     "## Dynamic and Kinematic Theory\n",
@@ -88,7 +89,7 @@
     "- Kinematic theory is used in neutron and X-ray diffraction almost exclusively.\n",
     "\n",
     "- Dynamic theory incorporates multi scattering events.\n",
-    "- Dynamic theory results in Rocking Curves of intensities of diffracted beams with sample thickness.\n",
+    "- Dynamic theory results in *Rocking Curves* (oscillations) of intensities of diffracted beams with sample thickness.\n",
     "- Dynamic theory can analytically be solved only for the two beam case, strangely the basis for conventional TEM.\n"
    ]
   },
@@ -166,10 +167,10 @@
    "metadata": {},
    "source": [
     "## Navigation\n",
-    "- **[Back: Chapter 1: Introduction](../Introduction/CH1_00-Introduction.ipynb)**    \n",
-    "- **[Next: Chapter 3: Imaging](../Imaging/CH3_00-Imaging.ipynb)**    \n",
-    "- **[Front](../_MSE672_Intro_TEM.ipynb)**\n",
-    "\n",
+    "- <font size = \"3\">  **Back Chapter 1: [Introduction](CH1_00-Introduction.ipynb)** </font>\n",
+    "- <font size = \"3\">  **Next: [The Electron](CH2_01-Electron.ipynb)** </font>\n",
+    "- <font size = \"3\">  **Chapter 3: [Imaging](../Imaging/CH3_00-Imaging.ipynb)** </font>\n",
+    "- <font size = \"3\">  **List of Content: [Front](../_MSE672_Intro_TEM.ipynb)** </font>\n",
     "\n"
    ]
   },
